--- a/zk.csproj
+++ b/zk.csproj
@@ -65,6 +65,12 @@
     <Compile Include="network.cs" />
     <Compile Include="Order.cs" />
     <Compile Include="OrderAndOp.cs" />
+    <Compile Include="orderHistoryQuery.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="orderHistoryQuery.Designer.cs">
+      <DependentUpon>orderHistoryQuery.cs</DependentUpon>
+    </Compile>
     <Compile Include="OrderInfo.cs" />
     <Compile Include="OrderOp.cs" />
     <Compile Include="OrderRecord.cs" />
@@ -77,6 +83,9 @@
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="orderHistoryQuery.resx">
+      <DependentUpon>orderHistoryQuery.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
